--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/ffmpeg-static": "^3.0.0",
     "@types/node": "^14.17.15",
+    "@types/tough-cookie": "^4.0.1",
     "@types/uuid": "^8.3.1",
     "husky": "^7.0.2",
     "prettier": "^2.3.2",
@@ -23,6 +25,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -31,6 +34,7 @@
     "helmet": "^4.6.0",
     "mongoose": "^6.0.5",
     "stream-mime-type": "^1.0.2",
+    "tough-cookie": "^4.0.0",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2"
   }
